# Capstan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  compile.bat  install.bat  project.py
capstan/include/: AssetManager.h  BitmapFile.h  Globals.h  HashFunctions.h  IniFileParser.h  MemoryManager.h  MyMath.h  RenderManager.h  SystemManager.h  Timer.h  strings.h  utils.h
capstan/include/Allocators/: BitmappedAllocator.h  DoubleStackAllocator.h  PoolAllocator.h  StackAllocator.h
capstan/include/Capstan/: AssetManager.h  Common.h  Globals.h  Strings.h  Types.h
capstan/include/ECS/: EntityManager.h
capstan/include/Graphics/: Camera.h  RenderManager.h
capstan/include/Math/: Arithmetic.h  Color.h  Constants.h  Matrix.h  Matrix4f.h  Quaternion.h  Trigonometry.h  Vector.h  Vector2f.h  Vector3f.h  Vector4f.h
capstan/include/OpenGL/: Camera.h  OpenGL.h  Shader.h  gl.h
capstan/include/Platform/: Assert.h  Clock.h  Debug.h  FileSystem.h  GamePad.h  Intrinsics.h  Memory.h  OpenGLContext.h  Types.h
capstan/include/Sound/: SoundManager.h
capstan/src/: AssetManager.cpp  EventManager.cpp  InputManager.cpp  RenderManager.cpp  SystemManager.cpp  Timer.cpp  strings.cpp
capstan/src/Allocators/: BitmappedAllocator.cpp  DoubleStackAllocator.cpp  PoolAllocator.cpp  StackAllocator.cpp
capstan/src/Graphics/: Camera.cpp  (+1 more)
data/: assets.txt
data/shaders/: simple.frag.glsl  simple.vert  simple.vert.glsl
docs/: OpenGL.md
include/: AssetManager.h  BitmapFile.h  EventManager.h  FileSystem.h  InputManager.h  Matrix.h  MemoryManager.h  MyMath.h  Renderer.h  SystemManager.h  Vector.h  assets.h  debug.h  hash.h  matrix.h  memory.h  strings.h  threading.h  types.h  utils.h
include/Capstan/: BitmapFile.h  Common.h  Globals.h  HashFunctions.h  MemoryManager.h  Timer.h  Types.h
include/Memory/: StackAllocator.h
include/MemoryAllocators/: PoolAllocator.h  StackAllocator.h
include/OpenGL/: Functions.inl  OpenGL.h  Program.h  Shader.h  Texture.h  gl.h
include/Platform/: FileSystem.h  GamePad.h  Memory.h  OpenGLContext.h
include/Vector/: Vector.inl  Vector2f.inl  Vector3f.inl
include/Win32/: WGLExtensions.h
include/gl/: glcorearb.h
scripts/: compile.py  opengl.py
scripts/compile/: __init__.py  compile.py
settings/: __init__.py  common.py  opengl.py
settings/platform/: windows.py
settings/templates/: FunctionDeclarations.inl
source/: AssetManager.cpp  Timer.cpp
source/Allocators/: BitmappedAllocator.cpp  DoubleStackAllocator.cpp  PoolAllocator.cpp  StackAllocator.cpp
source/Math/: Vector3f.cpp  Vector4f.cpp
src/: AssetManager.cpp  EventManager.cpp  InputManager.cpp  RenderManager.cpp  SystemManager.cpp  matrix.cpp  memory.cpp  strings.cpp
src/Memory/: StackAllocator.cpp
src/MemoryAllocators/: PoolAllocator.cpp  StackAllocator.cpp
src/OpenGL/: OpenGL.cpp  Program.cpp  Shader.cpp
src/Win32/: Assert.cpp  Debug.cpp  FileSystem.cpp  GamePad.cpp  Main.cpp  Memory.cpp  MemoryManager.cpp  Threading.cpp
targets/Windows/: CMakeLists.txt  Win32Main.cpp
tools/: build_settings.py
tools/opengl/: __init__.py  generate.py
tools/scripts/: __init__.py  build.py  compile.py
tools/settings/: opengl.py  windows.py
(+95 files in other folders)
